--- a/index.html
+++ b/index.html
@@ -1,20 +1,40 @@
-<DOCTYPE! HTML>
+<!DOCTYPE html>
+
 <head>
-  <title>
-    Lesson Templates
-  </title>
-  <link rel="stylesheet" href="Education_site.css">
+  <meta charset="utf-8">
+  <html lang="en">
+  <title>EduPortal - Home</title>
+  <link rel="stylesheet" href="https://meyerweb.com/eric/tools/css/reset/reset.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="stylesheet" type="text/stylesheet" href="styles.css">
 </head>
 
-
-
 <body>
+  <header>
+    <div class = "search-ui">
+      <img src="images/searchui.png" alt="search">
+    </div>
+    <!--search bar-->
+    <input type="text" name="search" placeholder="Search..">
+  </header>
 
-  <div class="button_subject">
-    <h3> <center> Subject </center> </h3>
-  </div>
-  <div class="button_issue">
-    <h3> <center> Issue </center> </h3>
-  </div>
+  <section class="highlights">
+    <!-- insert highlight reel code here -->
+    <!-- should be scrollable -->
+  </section>
 
+  <div class="discover">
+    <h3>DISCOVER BY...</h3>
+    <button class="b-subject">
+    <h2><a href="#">Subject</a></h2>
+  </button>
+    <button class="b-issue" href="#">
+    <h2><a href="#">Issue</a></h2>
+  </button>
+  </div>
 </body>
+
+</html>
