--- a/topics/subject.html
+++ b/topics/subject.html
@@ -1,40 +1,44 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <html lang="en">
-  <title>EduPortal - Home</title>
+  <title>EduPortal - Subject</title>
   <link rel="stylesheet" href="https://meyerweb.com/eric/tools/css/reset/reset.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <link rel="stylesheet" type="text/stylesheet" href="styles.css">
+  <link rel="stylesheet" type="text/stylesheet" href="../css/styles.css">
 </head>
 
 <body>
   <header>
-    <div class = "search-ui">
+    <div class="search-ui">
       <img src="images/searchui.png" alt="search">
     </div>
     <!--search bar-->
     <input type="text" name="search" placeholder="Search..">
   </header>
 
-  <section class="highlights">
-    <!-- insert highlight reel code here -->
-    <!-- should be scrollable -->
-  </section>
-
-  <div class="discover">
-    <h3>DISCOVER BY...</h3>
-    <button class="b-subject">
-    <h2><a href="#">Subject</a></h2>
-  </button>
-    <button class="b-issue" href="#">
-    <h2><a href="#">Issue</a></h2>
-  </button>
+  <nav>
+    <!-- this is the input form-->
+    <form>
+      <form class="form-inline" action="/action_page.php">
+  <div class="form-group">
+    <label for="subject">I'm looking for</label>
+    <input type="input" class="form-control" id="subject">
   </div>
+  <h1> in </h1>
+  <div class="form-group">
+    <label for="school-level">school level</label>
+    <input type="input" class="form-control" id="school-level">
+    <h1> school.</h1>
+  </div>
+  <button type="submit" class="btn">Go</button>
+</form>
+  </nav>
 </body>
 
 </html>
