--- a/index.html
+++ b/index.html
@@ -24,6 +24,49 @@
   <section class="highlights">
     <!-- insert highlight reel code here -->
     <!-- should be scrollable -->
+
+    <div><button id="seemore"><a href="#popup-fox">see more photos of this project</a></button></div>
+    <div id="popup-fox" class="modal">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-container">
+            <header class="modalhead">
+              <a href="#" class="closebutton">×</a>
+            </header>
+            <div class="w3-content w3-section" style="max-width:500px">
+              <img class="mySlides" src="images/fox-1.jpg" style="width: 100%">
+              <img class="mySlides" src="images/fox-2.jpg" style="width: 100%">
+              <img class="mySlides" src="images/fox-3.jpg" style="width:100%">
+              <img class="mySlides" src="images/fox-4.jpg" style="width:100%">
+              <img class="mySlides" src="images/fox-5.jpg" style="width:100%">
+            </div>
+            <!-- Button Java  -->
+            <script>
+              var myIndex = 0;
+              carousel();
+
+              function carousel() {
+                var i;
+                var x = document.getElementsByClassName("mySlides");
+                for (i = 0; i < x.length; i++) {
+                  x[i].style.display = "none";
+                }
+                myIndex++;
+                if (myIndex > x.length) {
+                  myIndex = 1
+                }
+                x[myIndex - 1].style.display = "block";
+                setTimeout(carousel, 2050); // Change image every 2.5 seconds
+              }
+            </script>
+            <!-- End Button Java -->
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+    <!-- end slide show-->
   </section>
 
   <div class="discover">
@@ -32,7 +75,7 @@
     <h2><a href="#">Subject</a></h2>
   </button>
     <button class="b-issue" href="#">
-    <h2><a href="#">Issue</a></h2>
+    <h2><a href="#">Tips</a></h2>
   </button>
   </div>
 </body>
