--- a/subject.html
+++ b/subject.html
@@ -10,7 +10,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <link rel="stylesheet" type="text/stylesheet" href="../css/styles.css">
+  <link rel="stylesheet" type="text/stylesheet" href="resultstyle.css">
 </head>
 
 <body>
@@ -22,9 +22,9 @@
     <input type="text" name="search" placeholder="Search..">
   </header>
 
-  <nav>
+  <!-- <nav> -->
     <!-- this is the input form-->
-    <form>
+    <!-- <form>
       <form class="form-inline" action="/action_page.php">
   <div class="form-group">
     <label for="subject">I'm looking for</label>
@@ -38,7 +38,21 @@
   </div>
   <button type="submit" class="btn">Go</button>
 </form>
-  </nav>
+  </nav> -->
+
+  <!-- Portfolio  -->
+  <div class="search-results">
+    <h1>History in Middle School</h1>
+        <div class="content">
+          <a id="item1" href="#"><img src="images/stonehenge.jpg" alt="article image"></a>
+          <a id="item2" href="#"><img src="images/history.jpg" alt="article image"></a>
+          <a id="item3" href="#"><img src="images/uk.jpg" alt="article image"></a>
+          <a id="item4" href="#"><img src="images/puritans.jpg" alt="article image"></a>
+          <a id="item5" href="#"><img src="images/egypt.jpg" alt="article image"></a>
+          <a id="item6" href="#"><img src="images/history-two.jpg" alt="article image"></a>
+        </div>
+  </div>
+
 </body>
 
 </html>
