--- a/subject.html
+++ b/subject.html
@@ -5,12 +5,9 @@
   <meta charset="utf-8">
   <html lang="en">
   <title>EduPortal - Subject</title>
-  <link rel="stylesheet" href="https://meyerweb.com/eric/tools/css/reset/reset.css">
+  <!-- <link rel="stylesheet" href="https://meyerweb.com/eric/tools/css/reset/reset.css"> -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <link rel="stylesheet" type="text/stylesheet" href="resultstyle.css">
+  <link rel="stylesheet" type="text/stylesheet" href="subjstyle.css">
 </head>
 
 <body>
@@ -18,35 +15,17 @@
     <div class="search-ui">
       <img src="images/searchui.png" alt="search">
     </div>
-    <!--search bar-->
-    <input type="text" name="search" placeholder="Search..">
+    <!-- search bar -->
+     <input type="text" name="search" placeholder="Search..">
   </header>
 
-  <!-- <nav> -->
-    <!-- this is the input form-->
-    <!-- <form>
-      <form class="form-inline" action="/action_page.php">
-  <div class="form-group">
-    <label for="subject">I'm looking for</label>
-    <input type="input" class="form-control" id="subject">
-  </div>
-  <h1> in </h1>
-  <div class="form-group">
-    <label for="school-level">school level</label>
-    <input type="input" class="form-control" id="school-level">
-    <h1> school.</h1>
-  </div>
-  <button type="submit" class="btn">Go</button>
-</form>
-  </nav> -->
-
-  <!-- Portfolio  -->
-  <div class="search-results">
+  <!-- Search Results  -->
+  <div class="searchresults">
     <h1>History in Middle School</h1>
         <div class="content">
-          <a id="item1" href="#"><img src="images/stonehenge.jpg" alt="article image"></a>
-          <a id="item2" href="#"><img src="images/history.jpg" alt="article image"></a>
-          <a id="item3" href="#"><img src="images/uk.jpg" alt="article image"></a>
+          <div id="item1"><a href="#"><img src="images/stonehenge.jpg" alt="article image"></a><div class = "whitebox"><h2>How to Teach History (and How Not to)<br>By Valerie Strauss</h2></div></div>
+          <div id="item2"><a href="#"><img src="images/history.jpg" alt="article image"></a><h2>8 Ways to Make History Meaningful<br>By Sarah Cooper</h2></div>
+          <div id="item3"><a href="#"><img src="images/uk.jpg" alt="article image"></a></div>
           <a id="item4" href="#"><img src="images/puritans.jpg" alt="article image"></a>
           <a id="item5" href="#"><img src="images/egypt.jpg" alt="article image"></a>
           <a id="item6" href="#"><img src="images/history-two.jpg" alt="article image"></a>
