--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <html lang="en">
@@ -10,11 +11,18 @@
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" type="text/stylesheet" href="styles.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <style>
+    .mySlides {
+      display: none;
+    }
+  </style>
 </head>
 
 <body>
   <header>
-    <div class = "search-ui">
+    <div class="search-ui">
       <img src="images/searchui.png" alt="search">
     </div>
     <!--search bar-->
@@ -24,48 +32,31 @@
   <section class="highlights">
     <!-- insert highlight reel code here -->
     <!-- should be scrollable -->
-
-    <div><button id="seemore"><a href="#popup-fox">see more photos of this project</a></button></div>
-    <div id="popup-fox" class="modal">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-container">
-            <header class="modalhead">
-              <a href="#" class="closebutton">×</a>
-            </header>
-            <div class="w3-content w3-section" style="max-width:500px">
-              <img class="mySlides" src="images/fox-1.jpg" style="width: 100%">
-              <img class="mySlides" src="images/fox-2.jpg" style="width: 100%">
-              <img class="mySlides" src="images/fox-3.jpg" style="width:100%">
-              <img class="mySlides" src="images/fox-4.jpg" style="width:100%">
-              <img class="mySlides" src="images/fox-5.jpg" style="width:100%">
-            </div>
-            <!-- Button Java  -->
-            <script>
-              var myIndex = 0;
-              carousel();
-
-              function carousel() {
-                var i;
-                var x = document.getElementsByClassName("mySlides");
-                for (i = 0; i < x.length; i++) {
-                  x[i].style.display = "none";
-                }
-                myIndex++;
-                if (myIndex > x.length) {
-                  myIndex = 1
-                }
-                x[myIndex - 1].style.display = "block";
-                setTimeout(carousel, 2050); // Change image every 2.5 seconds
-              }
-            </script>
-            <!-- End Button Java -->
-          </div>
-        </div>
-      </div>
+    <!-- <div class="w3-content w3-section" style="max-width:500px">
+      <img class="mySlides" src="images/history.jpg" style="width:100%">
+      <img class="mySlides" src="images/egypt.jpg" style="width:100%">
+      <img class="mySlides" src="images/stonehenge.jpg" style="width:100%">
     </div>
-  </div>
 
+    <script>
+      var myIndex = 0;
+      carousel();
+
+      function carousel() {
+        var i;
+        var x = document.getElementsByClassName("mySlides");
+        for (i = 0; i < x.length; i++) {
+          x[i].style.display = "none";
+        }
+        myIndex++;
+        if (myIndex > x.length) {
+          myIndex = 1
+        }
+        x[myIndex - 1].style.display = "block";
+        setTimeout(carousel, 2000); // Change image every 2 seconds
+      }
+    </script> -->
+    <!-- End Java -->
     <!-- end slide show-->
   </section>
 
