--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" type="text/stylesheet" href="styles.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <style>
     .mySlides {
       display: none;
     }
-  </style>
+  </style> -->
 </head>
 
 <body>
@@ -63,7 +63,7 @@
   <div class="discover">
     <h3>DISCOVER BY...</h3>
     <button class="b-subject">
-    <h2><a href="#">Subject</a></h2>
+    <h2><a href="subject.html">Subject</a></h2>
   </button>
     <button class="b-issue" href="#">
     <h2><a href="#">Tips</a></h2>
