--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 
   <div class="discover">
     <h3>DISCOVER BY...</h3>
-    <button class="b-subject">
-    <h2><a href="subject.html">Subject</a></h2>
+    <button class="b-subject" href="subject.html">
+    <h2><a href="subject.html" alt="subject button">Subject</a></h2>
   </button>
     <button class="b-issue" href="#">
     <h2><a href="#">Tips</a></h2>
