--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <html lang="en">
   <title>EduPortal - Home</title>
-  <link rel="stylesheet" href="https://meyerweb.com/eric/tools/css/reset/reset.css">
+<!--   <link rel="stylesheet" href="https://meyerweb.com/eric/tools/css/reset/reset.css"> -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" type="text/stylesheet" href="styles.css">
